# kre8

./: .coderabbit.yaml  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  kre8.yaml.example  pyproject.toml  requirements-test.txt  requirements.txt  secrets.yaml.example
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: architecture.md  components.md  docs_README.md  schemas.md
docs/_decisions/: decisions.md
docs/_ideation/: ideation_log.md  ideation_log_README.md  ideation_log_updated_v2.md
docs/_state/: state.md  (+3 more)
gate/: README.md  app.py
i2d2/: app.py  config.yaml  extract_kit.py  i2d2.py  intent.py  kit_schema.py  schemas.py
integration_tests/: README.md  conftest.py  test_i2d2_live.py  test_konnekt_live.py
kiosk/: __main__.py  server.py
kli/: kli.py
konnekt/: __init__.py  config.py  errors.py  konnekt.py  kre8_agent_README.md  models.py  probe.py  requirements.txt  secrets.py
kontext/: kre8_realm_README.md
kre8/: kre8_think_README.md
kre8_agent/: agent.py
kre8_arc/: kre8_arc_README.md
kre8_cli/: README.md
kre8_gate/: app.py
kre8_kiosk/: kre8_kiosk_README.md
kre8_laws/: kre8_laws_README.md
kre8_think/: config.yaml  engine.py  i2d2.py  intent.py  intent_models.py  models.py
kre8_whiteboard/: kre8_whiteboard_README.md
stub_tests/: test_instructions.md  test_kanvas_schema.py  test_kit_schema.py  test_konnekt.py  test_konnekt_integration.py  test_pipeline.py  test_probe.py
(+39 files in other folders)
