[project]
name = "kre8"
version = "0.1.0"
description = "kre8 — Thinking Infrastructure Engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]",
    "pydantic>=2.0",
    "pyyaml",
    "litellm",
    "google-cloud-secret-manager",
    "python-dotenv",
    "httpx",
]

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio"]

[tool.pytest.ini_options]
markers = [
    "integration: requires real GCP credentials and LLM access — run with: pytest integration_tests/ -m integration",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
